--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "names = list(map(name,restaurants))\n",
+    "names = list(map(restaurant['name,restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
