automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,22 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Fork & Fig', 'price': '$$', 'is_closed': False, 'review_count': 610}"
+       "'Fork & Fig'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = restaurants[0]\n",
+    "names = restaurants[0]['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
