automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "names = restaurants[0]['name']\n",
+    "names = list(map(restaurants[0]['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
