--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
    ],
    "source": [
     "names = list(map(restaurants[0]['name'],restaurants))\n",
-    "names\n",
+    "name\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
     "#  'Frontier Restaurant',\n",
