automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "Re\n",
+    "restname = restaurants[]\n",
     "names = list(map(restaurants[0]['name'],restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
