automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,8 +133,8 @@
     }
    ],
    "source": [
-    "restname = restaurants[]\n",
-    "names = list(map(restaurants[0]['name'],restaurants))\n",
+    "restname = restaurants[0]['name']\n",
+    "names = list(map(,restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
