--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review_counts = lambda restaurant: res\n",
+    "review_counts = lambda restaurant: restaurant['n']\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
