automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "review_counts = lambda restaurant: restaurant['review_count']\n",
+    "review_counts = map(lambda restaurant: restaurant['review_count'],re\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
