automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,22 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.<lambda>(restaurant)>"
+       "<map at 0x7fad1d798ac8>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "review_counts = map(lambda restaurant: restaurant['review_count'],re\n",
+    "review_counts = list(map(lambda restaurant: restaurant['review_count'],restaurants)\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
