--- a/index.ipynb
+++ b/index.ipynb
@@ -160,22 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x7fad1d798ac8>"
+       "[610, 11, 1373, 680, 54, 647, 25, 20]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "review_counts = list(map(lambda restaurant: restaurant['review_count'],restaurants)\n",
+    "review_counts = list(map(lambda restaurant: restaurant['review_count'],restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
