automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_restaurants(restaurants): list(map(format)re\n",
+    "def format_restaurants(restaurants): list(map(format_restaurant,r\n",
     "    pass"
    ]
   },
