--- a/index.ipynb
+++ b/index.ipynb
@@ -255,11 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-39-c00cc44a7ab0>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-c00cc44a7ab0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "def format_restaurants(restaurants): list(map(lambda restaurants : format_restaurant,r\n",
+    "def format_restaurants(restaurants): list(map(lambda restaurants : format_restaurant,restaurant))\n",
     "    pass"
    ]
   },
