automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,8 +268,7 @@
     }
    ],
    "source": [
-    "def format_restaurants(restaurants): list(map(lambda restaurants : format_restaurant,restaurant))\n",
-    "    pass"
+    "def format_restaurants(restaurants): list(map(lambda restaurants : format_restaurant,restaurant))"
    ]
   },
   {
