--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_restaurants(restaurants): list(map(format_restaurant(lambda restaurants : format_restaurant),restaurants))"
+    "def format_restaurants(restaurants):\n",
+    "    returrn list(map(format_restaurant(lambda restaurants : format_restaurant),restaurants))"
    ]
   },
   {
