--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "def format_restaurants(restaurants):\n",
-    "    returrn list(map(format_restaurant(lambda restaurants : format_restaurant),restaurants))"
+    "    return list(map())"
    ]
   },
   {
