--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "def format_restaurants(restaurants):\n",
-    "    return list(map())"
+    "    return list(map(format_restaurants,)"
    ]
   },
   {
