automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,12 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-54-c4b1583029de>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-54-c4b1583029de>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(format_restaurant,restaurant)\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def format_restaurants(restaurants):\n",
-    "    return list(map(format_restaurant)"
+    "    return list(map(format_restaurant,restaurant)"
    ]
   },
   {
