automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,12 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_restaurants(restaurants):\n",
-    "    return list(map(format_restaurant,restaurant))"
+    "    return list(map(format_restaurant,restaurants))"
    ]
   },
   {
