--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(ma)"
+    "    return list(map(lambda openrrest : ))"
    ]
   },
   {
