--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    s"
+    "    selected []\n",
+    "    "
    ]
   },
   {
