automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected []\n",
-    "    for restaurants in restau"
+    "    for restaurants in restaurants:\n",
+    "        if "
    ]
   },
   {
