automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected []\n",
     "    for restaurants in restaurants:\n",
-    "        if restaurants['is_closed']"
+    "        if not trestaurants['is_closed']"
    ]
   },
   {
