--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,8 @@
     "def open_restaurants(restaurants):\n",
     "    selected []\n",
     "    for restaurants in restaurants:\n",
-    "        if not trestaurants['is_closed']"
+    "        if not True restaurants['is_closed']\n",
+    "        "
    ]
   },
   {
