automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,8 @@
     "def open_restaurants(restaurants):\n",
     "    selected []\n",
     "    for restaurants in restaurants:\n",
-    "        if not True restaurants['is_closed']\n",
+    "        if not True restaurants['is_closed']:\n",
+    "            selecte\n",
     "        "
    ]
   },
