automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
     "    selected []\n",
     "    for restaurants in restaurants:\n",
     "        if not True restaurants['is_closed']:\n",
-    "            selecte\n",
+    "            selected.append(resturants)\n",
     "        "
    ]
   },
