--- a/index.ipynb
+++ b/index.ipynb
@@ -349,16 +349,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-59-a920f5bb5d0a>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-a920f5bb5d0a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    selected []\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected []\n",
     "    for restaurants in restaurants:\n",
     "        if not True restaurants['is_closed']:\n",
     "            selected.append(resturants)\n",
-    "            \n",
+    "    return selected\n",
     "        "
    ]
   },
