automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,15 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-60-700ededb35a1>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-61-d4cf598e9d99>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-700ededb35a1>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if not True restaurants['is_closed']:\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-61-d4cf598e9d99>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if is False restaurants['is_closed']:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurants in restaurants:\n",
-    "        if not True restaurants['is_closed']:\n",
+    "        if is False restaurants['is_closed']:\n",
     "            selected.append(resturants)\n",
     "    return selected\n",
     "        "
