--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurants in restaurants:\n",
-    "        if is False restaurants['is_closed']:\n",
+    "        if restaurants['is_closed'] == False:\n",
     "            selected.append(resturants)\n",
     "    return selected\n",
     "        "
