automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
-    "    for restaurants in restaurant:\n",
+    "    for restaurants in restaurants:\n",
     "        if restaurants['is_closed'] == False:\n",
     "            selected.append(resturants)\n",
     "    return selected\n",
