--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "      openrest = list(map()\n",
+    "      openrest = list(map(lambda open : re)\n",
     "    return selected\n",
     "        "
    ]
