--- a/index.ipynb
+++ b/index.ipynb
@@ -345,8 +345,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "      openrest = list(map(lambda open : restaurants['is_closed'])\n",
-    "    return selected\n",
+    "      openrest = list(map(lambda open : restaurants['is_closed'] == False,restaurants)\n",
+    "    return \n",
     "        "
    ]
   },
