--- a/index.ipynb
+++ b/index.ipynb
@@ -340,13 +340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-71-007d4eae8adb>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-007d4eae8adb>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return openrest\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "      openrest = list(map(lambda open : restaurants['is_closed'] == False,restaurants)\n",
-    "    return \n",
+    "    return openrest\n",
     "        "
    ]
   },
