automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    restaurants = list(filter(lambda open : restaurants['is_closed'] == False,restaurants)\n",
+    "    return list(filter(lambda open : restaurants['is_closed'] == False,restaurants)\n",
     "        "
    ]
   },
