--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda open : restaurant['is_closed'] == False,restaurants))\n",
+    "    return list(filter(lambda restaurant : restaurant['is_closed'] == False,restaurants))\n",
     "        "
    ]
   },
