--- a/index.ipynb
+++ b/index.ipynb
@@ -340,12 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant : not restaurant['is_closed'] == False,restaurants))\n",
+    "    return list(filter(lambda restaurant : not restaurant['is_closed'],restaurants))\n",
     "        "
    ]
   },
